chore: Fix some spacing, add back a CSS rule that took vacation.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,15 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {}
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    /*
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-    */
-  }
+  :root {}
 }
 
 body {
